[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/menus/global/my_menu_button.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://resources/themes/panel_button_theme.tres" type="Theme" id=3]
[ext_resource path="res://resources/themes/base_theme.tres" type="Theme" id=4]
[ext_resource path="res://ui/menus/run/zone_ui.gd" type="Script" id=5]
[ext_resource path="res://resources/fonts/actual/base/font_40_outline.tres" type="DynamicFont" id=6]
[ext_resource path="res://particles/sprites/particle_26.png" type="Texture" id=7]
[ext_resource path="res://particles/sprites/particle_2.png" type="Texture" id=8]
[ext_resource path="res://particles/sprites/particle_9.png" type="Texture" id=10]

[node name="ZoneUI" type="PanelContainer"]
margin_left = 563.0
margin_right = 982.0
margin_bottom = 423.0
rect_min_size = Vector2( 300, 300 )
rect_clip_content = true
theme = ExtResource( 4 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
icon_difficulty = ExtResource( 10 )
icon_difficulty_unselected = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 416.0
margin_bottom = 489.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 386.0
margin_bottom = 459.0
custom_constants/separation = 50

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 361.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 6 )
text = "CRASH_ZONE"
align = 1

[node name="Icon" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_left = 148.0
margin_top = 95.0
margin_right = 212.0
margin_bottom = 159.0
size_flags_horizontal = 4
texture = ExtResource( 2 )

[node name="DifficultyContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 209.0
margin_right = 361.0
margin_bottom = 339.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifficultySliderContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/DifficultyContainer"]
margin_right = 361.0
margin_bottom = 62.0
custom_constants/separation = 25
alignment = 1

[node name="LabelDifficulty" type="Label" parent="MarginContainer/VBoxContainer/DifficultyContainer/DifficultySliderContainer"]
margin_top = 8.0
margin_right = 211.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 6 )
text = "DIFFICULTY"
align = 1

[node name="DecreaseDifficultyButton" type="Button" parent="MarginContainer/VBoxContainer/DifficultyContainer/DifficultySliderContainer"]
margin_left = 236.0
margin_right = 286.0
margin_bottom = 62.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 4
theme = ExtResource( 3 )
text = "<"
script = ExtResource( 1 )

[node name="IncreaseDifficultyButton" type="Button" parent="MarginContainer/VBoxContainer/DifficultyContainer/DifficultySliderContainer"]
margin_left = 311.0
margin_right = 361.0
margin_bottom = 62.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 4
theme = ExtResource( 3 )
text = ">"
script = ExtResource( 1 )

[node name="DifficultyIconsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/DifficultyContainer"]
margin_top = 66.0
margin_right = 361.0
margin_bottom = 130.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/DifficultyContainer/DifficultyIconsContainer"]
margin_left = 12.0
margin_right = 76.0
margin_bottom = 64.0
texture = ExtResource( 8 )

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/DifficultyContainer/DifficultyIconsContainer"]
margin_left = 80.0
margin_right = 144.0
margin_bottom = 64.0
texture = ExtResource( 8 )

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/DifficultyContainer/DifficultyIconsContainer"]
margin_left = 148.0
margin_right = 212.0
margin_bottom = 64.0
texture = ExtResource( 8 )

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/VBoxContainer/DifficultyContainer/DifficultyIconsContainer"]
margin_left = 216.0
margin_right = 280.0
margin_bottom = 64.0
texture = ExtResource( 8 )

[node name="TextureRect5" type="TextureRect" parent="MarginContainer/VBoxContainer/DifficultyContainer/DifficultyIconsContainer"]
margin_left = 284.0
margin_right = 348.0
margin_bottom = 64.0
texture = ExtResource( 8 )

[node name="EmptySpace" type="Control" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 304.0
margin_right = 361.0
margin_bottom = 304.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChooseButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 389.0
margin_right = 361.0
margin_bottom = 434.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 6 )
text = "MENU_CHOOSE"
script = ExtResource( 1 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/DifficultyContainer/DifficultySliderContainer/DecreaseDifficultyButton" to="." method="_on_DecreaseDifficultyButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/DifficultyContainer/DifficultySliderContainer/IncreaseDifficultyButton" to="." method="_on_IncreaseDifficultyButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ChooseButton" to="." method="_on_ChooseButton_pressed"]
